
Changes and New Features in 1.0 (2021-02-04):
	* Importing rbart CRAN package to make it C++ header-only

Changes and New Features in 1.1 (2021-02-23):
	* Fix varcount uninitialized bug

Changes and New Features in 1.2 (2021-03-11):
	* Due to some challenges with XPtr's, adding an alternative
	storage mechanism for the trees as strings

Changes and New Features in 1.3 (2021-09-10):
	* varcount now returned per MCMC iteration
	with varcount.mean for their mean

Changes and New Features in 1.4 (2021-10-30):
	* fixing Makevars.win 