@@ -1,0 +1,2 @@
+CXX_STD = CXX11
+PKG_CPPFLAGS = -I../inst/include/
