@@ -14,4 +14,5 @@ Changes and New Features in 1.3 (2021-09-10):
 	with varcount.mean for their mean
 
 Changes and New Features in 1.4 (2021-10-30):
-	* fixing Makevars.win 
+	* fixing Makevars.win and adding Makevars
+	since Windows can't typically create it 
